--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -210,7 +210,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 12px;
 }
 .navbar .dropdown ul a:hover, .navbar .dropdown ul .active:hover, .navbar .dropdown ul li:hover > a {
-  color: #47b2e4;
+  color: #FFFFFF;
 }
 .navbar .dropdown:hover > ul {
   opacity: 1;
