--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 a {
-  color: #47b2e4;
+  color: #fff;
   text-decoration: none;
 }
 
@@ -166,7 +166,7 @@ h1, h2, h3, h4, h5, h6 {
   margin-left: 5px;
 }
 .navbar a:hover, .navbar .active, .navbar .active:focus, .navbar li:hover > a {
-  color: #47b2e4;
+  color: #fff;
 }
 .navbar .getstarted, .navbar .getstarted:focus {
   padding: 8px 20px;
