--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 a {
-  color: #fff;
+  color: #47b2e4;
   text-decoration: none;
 }
 
@@ -96,7 +96,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 .back-to-top:hover {
   background: #6bc1e9;
-  color: #47b2e4;
+  color: #fff;
 }
 .back-to-top.active {
   visibility: visible;
@@ -112,7 +112,8 @@ h1, h2, h3, h4, h5, h6 {
   padding: 15px 0;
 }
 #header.header-scrolled, #header.header-inner-pages {
-  background: #236889;
+  background: #fff;
+  color: #236889;
 }
 #header .logo {
   font-size: 30px;
@@ -126,6 +127,9 @@ h1, h2, h3, h4, h5, h6 {
 #header .logo a {
   color: #fff;
 }
+ .no-scrolled *{
+  color: #fff !important;
+}
 #header .logo img {
   max-height: 40px;
 }
@@ -138,6 +142,12 @@ h1, h2, h3, h4, h5, h6 {
 */
 .navbar {
   padding: 0;
+}
+.nav-scroll{
+  color: #0d6efd !important;
+}
+.nav-scroll:hover{
+  color: #47b2e4 !important;
 }
 .navbar ul {
   margin: 0;
@@ -156,7 +166,6 @@ h1, h2, h3, h4, h5, h6 {
   padding: 10px 0 10px 30px;
   font-size: 15px;
   font-weight: 500;
-  color: #fff;
   white-space: nowrap;
   transition: 0.3s;
 }
@@ -241,7 +250,6 @@ h1, h2, h3, h4, h5, h6 {
 * Mobile Navigation 
 */
 .mobile-nav-toggle {
-  color: #fff;
   font-size: 28px;
   cursor: pointer;
   display: none;
@@ -249,7 +257,7 @@ h1, h2, h3, h4, h5, h6 {
   transition: 0.5s;
 }
 .mobile-nav-toggle.bi-x {
-  color: #fff;
+  color: #000;
 }
 
 @media (max-width: 991px) {
@@ -268,7 +276,7 @@ h1, h2, h3, h4, h5, h6 {
   right: 0;
   left: 0;
   bottom: 0;
-  background: #236889;
+  background: #fff;
   transition: 0.3s;
   z-index: 999;
 }
@@ -896,6 +904,10 @@ section {
 --------------------------------------------------------------*/
 .portfolio-details {
   padding-top: 40px;
+}
+.bg-portfolio {
+  width: 100%;
+  background: #236889;
 }
 .portfolio-details .portfolio-details-slider img {
   width: 100%;
