--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -780,7 +780,7 @@ section {
 # Cta
 --------------------------------------------------------------*/
 .cta {
-  background: linear-gradient(#236889, rgba(40, 58, 90, 0.9)), url("../img/cta-bg.jpg") fixed center center;
+  background: linear-gradient(#236889, rgba(40, 58, 90, 0.9)), url("../img/bg web.png") fixed center center;
   background-size: cover;
   padding: 120px 0;
 }
