--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -363,7 +363,7 @@ h6 {
 --------------------------------------------------------------*/
 #hero {
   width: 100%;
-  height: 80vh;
+  height: 100vh;
   background: linear-gradient(#8c9091, rgba(40, 58, 90, 0.9)),
     url('../img/rumahAdatToraja.jpg') fixed center center;
   background-position: 25%;
@@ -481,6 +481,23 @@ h6 {
 /*--------------------------------------------------------------
 # Sections General
 --------------------------------------------------------------*/
+#slideDaerah {
+  height: 100vh;
+  background: linear-gradient(#464949, rgba(30, 43, 66, 0.9));
+  padding: 0;
+}
+#slideDaerah .carousel-caption {
+  top: 35%;
+}
+#slideDaerah .carousel-caption h1 {
+  font-size: 3em;
+  font-weight: 800;
+}
+#slideDaerah .carousel-caption p {
+  font-size: 1.3em;
+  padding-top: 10px;
+}
+
 section {
   padding: 60px 0;
   overflow: hidden;
