--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -459,6 +459,29 @@ h6 {
     font-size: 16px;
     padding: 10px 24px 11px 24px;
   }
+  .owl-carousel .slide-content {
+    left: 0% !important;
+  }
+  .owl-carousel .content-wrapper-1 {
+    left: 0% !important;
+  }
+  .owl-carousel .slide-content h1 {
+    font-size: 1.4rem;
+  }
+  .owl-carousel .slide-content p {
+    font-size: 0.9rem;
+  }
+  .owl-prev,
+  .owl-next {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    color: #fff !important;
+    font-size: 10px !important;
+    font-weight: bolder !important;
+    background: none !important;
+    opacity: 0.5;
+  }
 }
 
 @-webkit-keyframes up-down {
@@ -501,7 +524,7 @@ h6 {
   left: 0;
   width: 100%;
   height: 100vh;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.6);
 }
 .slide-1 {
   background-image: url('/assets/img/rumahAdatToraja.jpg');
@@ -513,9 +536,13 @@ h6 {
   position: absolute;
   text-align: center;
   top: 50%;
-  left: 28%;
   transform: translateY(-50%);
   color: #fff;
+}
+.slide .content-wrapper-1 {
+  position: absolute;
+  top: 50%;
+  left: 25%;
 }
 .slide-content h1 {
   font-size: 3rem;
